--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate, perspiciatis. Ut, odit. Quos facere similique nisi deleniti est deserunt perspiciatis, dolores quo ullam maxime quidem possimus, quibusdam illum laboriosam natus.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, assumenda eveniet! In cum quas voluptatum sapiente praesentium dolore voluptas fugit asperiores nisi neque, tempora est vel obcaecati, cupiditate earum numquam!</p>
         </article>
     </main>
 </body>
